--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,7 @@ before_install:
   - sudo apt-get install libeigen3-dev
   - sudo apt-get install cmake
   - sudo apt-get install ros-kinetic-tf2
+  - sudo apt-get install ros-kinetic-tf2-ros
   - sudo apt-get install ros-kinetic-dynamic-reconfigure
 
 
